<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">


    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="8"
        android:text="0"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPay3"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSave" />

    <EditText
        android:id="@+id/editTextKwConsu"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:layout_marginBottom="404dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSF"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerHrSun"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:ems="10"
        android:text="0"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPay3"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerPIncrement"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:ems="10"
        android:text="0"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerHrSun"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerPowerPanels"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerHrSun"
        app:layout_constraintVertical_bias="0.069" />

    <Spinner
        android:id="@+id/spinnerSF"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:ems="10"
        android:text="0"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerHrSun"
        app:layout_constraintVertical_bias="0.138" />

    <EditText
        android:id="@+id/editTextSave"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="number"
        android:text="5120000"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <TextView
        android:id="@+id/textPay"
        android:layout_width="132dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/payMonth"
        android:textSize="@dimen/sizeTpayMonth"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextPay3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSave" />

    <TextView
        android:id="@+id/textHrSun"
        android:layout_width="102dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/hrsSun"
        android:textSize="@dimen/sizeThrsSun"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/spinnerHrSun"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPay" />

    <TextView
        android:id="@+id/textPIncrement"
        android:layout_width="102dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/textPIncrement"
        android:textSize="@dimen/sizeTtextPIncrement"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/spinnerPIncrement"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHrSun" />

    <TextView
        android:id="@+id/textPowerPanels"
        android:layout_width="122dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/textPowerPanels"
        android:textSize="@dimen/sizetextPowerPanels"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPIncrement" />

    <TextView
        android:id="@+id/textSF"
        android:layout_width="102dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="388dp"
        android:text="@string/textSF"
        android:textSize="@dimen/sizetexttextSF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPowerPanels"
        app:layout_constraintVertical_bias="0.149" />

    <TextView
        android:id="@+id/textViewKwConsuption"
        android:layout_width="102dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="Kw Consumido"
        android:textSize="@dimen/sizetexttextSF"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextKwConsu"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSF" />

    <TextView
        android:id="@+id/textSave"
        android:layout_width="102dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/porcentA"
        android:textSize="@dimen/sizeTporcentA"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextSave"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="112dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:text="@string/kwmensual"
        android:textSize="@dimen/sizeTkwmensual"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textViewRNrPaneles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textViewRNrPaneles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRKwI" />

    <TextView
        android:id="@+id/textViewNroPaneles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewNroPaneles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKwInst" />

    <TextView
        android:id="@+id/textViewRTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textViewRTotalCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRNrPaneles" />

    <TextView
        android:id="@+id/textViewRNewPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewRNewPay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRTotalCost" />

    <TextView
        android:id="@+id/textViewNewRInfoString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewNewRInfoString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRNewPay" />

    <TextView
        android:id="@+id/textViewNewRInfoInverters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewNewRInfoInverters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewRInfoString"
        app:layout_constraintVertical_bias="0.196" />

    <TextView
        android:id="@+id/textViewTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewTotalCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNroPaneles" />

    <TextView
        android:id="@+id/textViewNewPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:text="@string/textViewNewPay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalCost" />

    <TextView
        android:id="@+id/textViewNewInfoString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:text="@string/textViewNewInfoString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewPay" />

    <TextView
        android:id="@+id/textViewNewInfoInverters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:text="@string/textViewNewInfoInverters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewInfoString"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewRKwI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textViewRKwI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRArea" />

    <TextView
        android:id="@+id/textViewAreaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="204dp"
        android:text="@string/textViewAreaTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewRArea"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewRArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="204dp"
        android:text="@string/textViewRArea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewKwInst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewKwInst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAreaTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>